app-test/testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/check/cmp1.check
testdata/typesystem/neg/type-comparison-algebraic-type-with-any-type/src/cmp.cal:6:21: error: = is not supported with T and U.
            OUT <-- T(1, false) = A; // error
                    ^^^^^^^^^^^^^^^